Load QML from resources

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,15 @@ qt_add_executable(chess_program
     ${PROJECT_SOURCES}
 )
 
+# Bundle QML files into the executable using Qt's resource system
+qt_add_resources(chess_program qml_resources
+    PREFIX "/"
+    FILES
+        ${CMAKE_SOURCE_DIR}/qml/ChessGame.qml
+        ${CMAKE_SOURCE_DIR}/qt/Game_board.ui.qml
+        ${CMAKE_SOURCE_DIR}/qt/Screen01.ui.qml
+)
+
 # Link against required Qt libraries
 target_link_libraries(chess_program
     PRIVATE Qt6::Core Qt6::Gui Qt6::Widgets Qt6::Quick Qt6::Qml
