Remove duplicate QML files and update resource list

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,12 +15,17 @@ qt_add_executable(chess_program
 )
 
 # Bundle QML resources so the UI loads from the binary
+# QML resources packaged with the executable
+set(QML_FILES
+    ${CMAKE_SOURCE_DIR}/qml/ChessGame.qml
+    ${CMAKE_SOURCE_DIR}/qt/Game_board.ui.qml
+    ${CMAKE_SOURCE_DIR}/qt/Screen01.ui.qml
+)
+
 qt_add_resources(chess_program qml_resources
     PREFIX "/"
     FILES
-        ${CMAKE_SOURCE_DIR}/qml/ChessGame.qml
-        ${CMAKE_SOURCE_DIR}/qt/Game_board.ui.qml
-        ${CMAKE_SOURCE_DIR}/qt/Screen01.ui.qml
+        ${QML_FILES}
 )
 
 # Link against Qt libraries
